fix: logistration hide user menu icon on mobile screens (#84)
VAN-227

--- a/src/index.scss
+++ b/src/index.scss
@@ -32,6 +32,8 @@ $white: #fff;
 }
 
 .site-header-mobile {
+  height: 3rem;
+
   .nav-link {
     text-decoration: none;
     cursor: pointer;
